code overflow fixed

--- a/source/_sass/_pages/_home.scss
+++ b/source/_sass/_pages/_home.scss
@@ -13,7 +13,14 @@ div.home {
   }
   h1 {
     font-family: calligraffittiregular, sans-serif;
-    text-shadow: 1px 1px 4px #aaa;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    //text-shadow: 0px 0  #801dae;
+    //background-color: blue;
+    background-image: -webkit-linear-gradient(0deg, #4b5cc4, #801dae, #edd1d8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   div.slogan {
     color: #666;
