--- a/source/_sass/_pages/_post.scss
+++ b/source/_sass/_pages/_post.scss
@@ -100,7 +100,7 @@ figure.highlight, figure.highlight table {
   width: 100%;
 }
 figure.highlight{
-  overflow: scroll;
+  overflow: auto;
   margin: 15px 0;
   box-shadow: 2px 2px 4px -2px #aaa;
 }
